--- a/fcbalance/src/main/resources/application.properties
+++ b/fcbalance/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=fcbalance
 
-spring.kafka.consumer.bootstrap-servers=localhost:9092
+spring.kafka.consumer.bootstrap-servers=kafka:9092
 spring.kafka.consumer.group-id=balance-consumer-group
 
 spring.datasource.url=jdbc:mysql://localhost:3306/wallet
