--- a/fcbalance/Dockerfile
+++ b/fcbalance/Dockerfile
@@ -2,7 +2,7 @@ FROM openjdk:17-jdk-alpine
 
 WORKDIR /app
 
-COPY target/fcbalance.jar /app/fcbalance.jar
+COPY jar/fcbalance.jar /app/fcbalance.jar
 
 COPY src/main/resources/application.properties /app/application.properties
 
